dolphinResidence/src/components/HamburgerMenu/HamburgerMenu.css
.off-screen-menu {
  width: 100%;
  padding: 1.5rem 0;
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  bottom: -500%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  transform: translateY(-100%);
  opacity: 0;
  visibility: hidden;
  transition: all 0.4s ease-in-out;
}

.off-screen-menu.active {
  transform: translateY(0);
  opacity: 1;
  visibility: visible;
}

.off-screen-menu .links {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

@media screen and (min-width: 880px) {
  .off-screen-menu {
    display: none;
    visibility: hidden;
    opacity: 0;
  }
}

